--- a/yatube/templates/users/password_reset_confirm.html
+++ b/yatube/templates/users/password_reset_confirm.html
@@ -38,11 +38,10 @@
                 </button>
               </div>
             </form>
-          </div> <!-- card body -->
-        </div> <!-- card -->
-      </div> <!-- col -->
-    </div> <!-- row -->
-    <!-- если использована неправильная ссылка -->
+          </div>
+        </div>
+      </div>
+    </div>
 {% else %}
     <div class="row justify-content-center">
       <div class="col-md-8 p-5">
@@ -52,11 +51,10 @@
           </div>
           <div class="card-body">
             <p>Ссылка сброса пароля содержит ошибку или устарела.</p>
-          </div> <!-- card body -->
-        </div> <!-- card -->
-      </div> <!-- col -->
-    </div> <!-- row -->
-    <!-- конец если использована неправильная ссылка -->
+          </div>
+        </div>
+      </div>
+    </div>
 {% endif %}
   </div>
 {% endblock %}
