--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -8,7 +8,7 @@
       <p style="font-style: italic">Это моё рабочее место</p>
     </aside>
     <article style="padding-left: 70px" class="col-12 col-md-9">
-      <h1>Привет, я Кобзев Вячеслав, автор этого проекта.</h1>
+      <h1>Привет! я Вячеслав, автор этого проекта.</h1>
       <p>
         Работал бухгалтером, снабженцем, а теперь я тут.<br>
         Всю жизнь избегал всего, что связано с программированием,
@@ -16,8 +16,8 @@
         В итоге приручил питона, подружился с пандой, не боюсь анаконды.
       </p>
       <p>
-        <a href="https://t.me/MrSlavencio/" target="_blank"><img style="margin-bottom: 40px" src="{% static 'img/logo-telegram.png' %}" width=10% alt="Telegram">
-        <a href="https://github.com/MrSlavencio/" target="_blank"><img style="margin-bottom: 40px" src="{% static 'img/GitHub-logo.png' %}" width=16% alt="GitHub">
+        <a href="https://t.me/MrSlavencio/" target="_blank"><img style="margin-bottom: 40px" src="{% static 'img/logo-telegram.png' %}" width=10% alt="Telegram"></a>
+        <a href="https://github.com/MrSlavencio/" target="_blank"><img style="margin-bottom: 40px" src="{% static 'img/GitHub-logo.png' %}" width=16% alt="GitHub"></a>
       </p>
     </article>
   </div>
